--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,4 @@
-{erl_opts, [native]}.
+%{erl_opts, [native]}.
 {deps, [
         {ux, ".*", {git, "git://github.com/freeakk/ux.git", "master"}},
         {ucol, ".*", {git, "git://github.com/freeakk/ucol.git", "master"}}
