--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,5 @@
 %{erl_opts, [native]}.
 {deps, [
-        {ux, ".*", {git, "git://github.com/freeakk/ux.git", "master"}},
-        {ucol, ".*", {git, "git://github.com/freeakk/ucol.git", "master"}}
+        {ux, ".*", {git, "git://github.com/erlang-unicode/ux.git", "master"}},
+        {ucol, ".*", {git, "git://github.com/erlang-unicode/ucol.git", "master"}}
        ]}.
